fixed z-index for BMI tab

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -104,6 +104,7 @@ p > span {
   -webkit-transform: translateY(-50%);
   -ms-transform: translateY(-50%);
   transform: translateY(-50%);
+  z-index: 5;
 }
 
 .icon-bar a {
@@ -144,6 +145,7 @@ p > span {
   transition: opacity 500ms;
   visibility: hidden;
   opacity: 0;
+  z-index: 6;
 }
 
 .overlay:target {
@@ -199,6 +201,7 @@ p > span {
   overflow: hidden;
   border: 1px solid #ccc;
   background-color: #f1f1f1;
+  z-index: 1;
 }
 
 .tab button {
@@ -262,7 +265,7 @@ p > span {
   width: 100%;
   background-color: black;
   opacity: 0.5;
-  z-index: 1;
+  z-index: 3;
 }
 
 .hero video {
@@ -273,7 +276,7 @@ p > span {
   min-height: 100%;
   width: auto;
   height: auto;
-  z-index: 0;
+  z-index: 2;
   -ms-transform: translateX(-50%) translateY(-50%);
   -moz-transform: translateX(-50%) translateY(-50%);
   -webkit-transform: translateX(-50%) translateY(-50%);
@@ -282,7 +285,7 @@ p > span {
 
 .hero-content {
   position: relative;
-  z-index: 2;
+  z-index: 3;
 }
 
 @media screen and (max-width: 576px) {
